<resources>
    <string name="app_name">Sclad</string>
    <string name="login">Login</string>
    <string name="enter_password">Enter Password</string>
    <string name="title_activity_dash_board">DashBoardActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="home_second">Home Second</string>
    <string name="add_a_device">Add a device</string>
    <string name="view_stored_items">View Stored Items</string>
    <string name="log_faulty_item">Log Faulty Item</string>
    <string name="logout">Logout</string>
    <string name="product_name">Product name</string>
    <string name="textview">TextView</string>

    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="reorder_item">Reorder item</string>
    <string name="fault_reports_list">Fault reports</string>
    <string name="item_quantity">Item quantity</string>
    <string name="select_category">Select category</string>
    <string name="send_notification_upon_delivery">Send notification upon delivery</string>
    <string name="request_items">Request items</string>
    <string name="detail_of_device">DETAIL OF DEVICE</string>
    <string name="product_code">Product Code</string>
    <string name="quantity">Quantity</string>
    <string name="reordered">Reordered</string>
    <string name="dashboard">Dashboard</string>
    <string name="submit">Submit</string>
    <string name="file_a_fault_report">File a fault report</string>
    <string name="product_serial_number">Product serial number</string>
    <string name="upload_file">Upload file</string>
    <string name="date_of_discovery">Date of discovery</string>
    <string name="fault_description">Fault description</string>
    <string name="pick_date_of_discovery">Pick date of discovery</string>
    <string name="no_file_selected">No file selected.</string>
</resources>
