<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
                                                   xmlns:app="http://schemas.android.com/apk/res-auto"
                                                   xmlns:tools="http://schemas.android.com/tools"
                                                   android:id="@+id/frament_slideshow"
                                                   android:layout_width="match_parent"
                                                   android:layout_height="match_parent"
                                                   tools:context=".ui.faultyDevices.CreateFaultReportFragment">
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="409dp"
            android:layout_height="729dp"
            app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="1dp"
            app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="1dp"
            app:layout_constraintTop_toTopOf="parent" android:layout_marginTop="1dp"
            app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="1dp">

        <EditText
                android:layout_width="357dp"
                android:layout_height="50dp"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/productNameText"
                android:hint="@string/product_name" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
                android:layout_marginTop="28dp"
                app:layout_constraintTop_toBottomOf="@+id/textView14" android:autofillHints=""
        />
        <EditText
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:inputType="textMultiLine"
                android:gravity="start|top"
                android:ems="10"
                android:id="@+id/faultDescriptionText"
                android:hint="@string/fault_description"
                android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/openDateDialog"
                android:layout_marginBottom="16dp"
                app:layout_constraintBottom_toTopOf="@+id/uploadFileButton"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
        <EditText
                android:layout_width="357dp"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="10"
                android:id="@+id/serialNumText"
                android:hint="@string/product_serial_number" android:layout_marginTop="20dp"
                app:layout_constraintTop_toBottomOf="@+id/productNameText" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="24dp"
        />
        <Button
                android:text="@string/submit"
                android:layout_width="130dp"
                android:layout_height="58dp" android:id="@+id/submitFaultReportButton"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="196dp"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="156dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="165dp"
                app:layout_constraintHorizontal_bias="0.404" android:layout_marginTop="46dp"
                app:layout_constraintTop_toBottomOf="@+id/uploadFileButton" android:background="#3DA0EF"
                android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/file_a_fault_report"
                android:layout_width="358dp"
                android:layout_height="37dp" android:id="@+id/textView14"
                android:fontFamily="@font/roboto_light"
                android:textColor="#2144F3" android:textAlignment="viewStart" android:textSize="28sp"
                android:layout_marginTop="71dp" app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="27dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="24dp"
                android:layout_marginBottom="24dp" app:layout_constraintBottom_toTopOf="@+id/productNameText"
                app:layout_constraintHorizontal_bias="0.0"/>
        <Button
                android:text="@string/upload_file"
                android:layout_width="163dp"
                android:layout_height="42dp" android:id="@+id/uploadFileButton"
                android:background="#00BCD4"
                android:textColor="#FFFFFF"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="300dp"
                android:layout_marginTop="18dp" app:layout_constraintTop_toBottomOf="@+id/faultDescriptionText"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"/>
        <Button
                android:text="@string/pick_date_of_discovery"
                android:layout_width="215dp"
                android:layout_height="49dp" android:id="@+id/openDateDialog"
                android:layout_marginTop="12dp"
                app:layout_constraintTop_toBottomOf="@+id/serialNumText"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="170dp" android:background="#349EF3" android:textColor="#FFFFFF"/>
        <TextView
                android:text="@string/no_file_selected"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/selectedFileTextView"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="24dp"
                android:layout_marginTop="15dp" app:layout_constraintTop_toBottomOf="@+id/uploadFileButton"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>
