<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
             xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             tools:context=".ui.ReorderItemFragment"
             android:focusable="true"
             android:focusableInTouchMode="true" >
    <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
        <TextView
                android:text="@string/select_category"
                android:layout_width="97dp"
                android:layout_height="0dp" android:id="@+id/textView3"
                app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="272dp" app:layout_constraintTop_toTopOf="parent"
                android:layout_marginTop="166dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp"/>
        <Spinner
                android:layout_width="324dp"
                android:layout_height="35dp" android:id="@+id/categoryDropdown"
                android:visibility="visible"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="16dp"
                app:layout_constraintHorizontal_bias="0.49" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView3" android:layout_marginBottom="39dp"
                app:layout_constraintBottom_toTopOf="@+id/productNameInput"/>
        <EditText
                android:layout_width="325dp"
                android:layout_height="0dp"
                android:inputType="text"
                android:ems="10"
                android:id="@+id/productNameInput"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="42dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="44dp"
                android:layout_marginTop="39dp" app:layout_constraintTop_toBottomOf="@+id/categoryDropdown"
                android:hint="@string/product_name" android:autofillHints="@string/product_name"/>
        <SeekBar
                android:layout_width="300dp"
                android:layout_height="26dp" android:id="@+id/quantitySeekBar"
                android:progress="2" android:max="99" android:min="3" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="46dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="42dp" android:layout_marginBottom="40dp"
                app:layout_constraintBottom_toTopOf="@+id/sendNotificationSwitch" android:layout_marginTop="8dp"
                app:layout_constraintTop_toBottomOf="@+id/textView4" app:layout_constraintHorizontal_bias="0.0"/>
        <TextView
                android:text="@string/item_quantity"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/textView4"
                android:layout_marginBottom="12dp"
                app:layout_constraintBottom_toTopOf="@+id/quantitySeekBar" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="43dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="286dp" android:layout_marginTop="40dp"
                app:layout_constraintTop_toBottomOf="@+id/productNameInput" app:layout_constraintHorizontal_bias="0.0"/>
        <Switch
                android:text="@string/send_notification_upon_delivery"
                android:layout_width="245dp"
                android:layout_height="0dp" android:id="@+id/sendNotificationSwitch"
                app:layout_constraintStart_toStartOf="parent" android:layout_marginStart="43dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="123dp"
                android:layout_marginTop="40dp" app:layout_constraintTop_toBottomOf="@+id/quantitySeekBar"/>
        <Button
                android:text="@string/request_items"
                android:layout_width="wrap_content"
                android:layout_height="48dp" android:id="@+id/submitBtn"
                app:layout_constraintBottom_toBottomOf="parent"
                android:layout_marginBottom="140dp" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="141dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="142dp" />
        <TextView
                android:layout_width="29dp"
                android:layout_height="21dp" android:id="@+id/quantityTextView"
                android:layout_marginStart="4dp" app:layout_constraintStart_toEndOf="@+id/quantitySeekBar"
                android:layout_marginTop="82dp" app:layout_constraintTop_toBottomOf="@+id/productNameInput"
                app:layout_constraintBottom_toBottomOf="parent" android:layout_marginBottom="316dp"
                app:layout_constraintEnd_toEndOf="parent" android:layout_marginEnd="36dp"/>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" android:id="@+id/selectedProductQuantity"
                android:layout_marginBottom="20dp" app:layout_constraintBottom_toTopOf="@+id/textView4"
                android:text="       "
                android:layout_marginTop="1dp"
                app:layout_constraintTop_toBottomOf="@+id/productNameInput"
                app:layout_constraintVertical_bias="0.0" app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="175dp" app:layout_constraintEnd_toEndOf="parent"
                android:layout_marginEnd="212dp"/>
    </androidx.constraintlayout.widget.ConstraintLayout>
</FrameLayout>
